package com.pfa.backend.enums;

public enum ComplaintStatus {
    PENDING,
    VALIDATED,
    ASSIGNED,
    IN_PROGRESS,
    RESOLVED,
    ARCHIVED,
    CLOSED,
    REJECTED,
    CANCELLED
}