package com.pfa.backend.enums;

public enum Governorate {
    TUNIS, ARIANA, BEN_AROUS, MANOUBA, NABEUL, ZAGHOUAN,
    BIZERTE, BEJA, JENDOUBA, LE_KEF, SILIANA, SOUSSE,
    MONASTIR, MAHDIA, SFAX, KAIROUAN, KASSERINE, SIDI_BOUZID,
    GABES, MEDENINE, TATAOUINE, GAFSA, TOZEUR, KEBILI
}