package com.pfa.backend.enums;

public enum Grade {
    Cat_A, Cat_B, Cat_C
}