package com.pfa.backend.enums;

public enum Priority {
    Low, Medium, High, Emergency
}