package com.pfa.backend.enums;

public enum ServiceType {
    Voirie, Eclairage, Assainissement, Espaces_Verts
}